video decoder moved to separate filec

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,8 +21,6 @@
     "cortex-debug.openocdPath": "${env:PICO_OPENOCD}",
     "cortex-debug.variableUseNaturalFormat": false,
     "files.associations": {
-        "heatshrink_decoder.h": "c",
-        "heatshrink_config.h": "c",
-        "stdint.h": "c"
+        "video_decoder.h": "c"
     }
 }
