--- a/heatshrink/CMakeLists.txt
+++ b/heatshrink/CMakeLists.txt
@@ -2,14 +2,12 @@
 ## in YOUR (Pico) project.
 ## See examples_pico/CMakeLists.txt to see how it could be done
 
-cmake_minimum_required(VERSION 3.12)
-
 # Define the heatshrink library
 add_library(heatshrink INTERFACE)
 
 target_sources(heatshrink INTERFACE
-    ${CMAKE_CURRENT_LIST_DIR}/heatshrink_decoder.c ${CMAKE_CURRENT_LIST_DIR}/heatshrink_decoder.h
-    ${CMAKE_CURRENT_LIST_DIR}/heatshrink_encoder.c ${CMAKE_CURRENT_LIST_DIR}/heatshrink_encoder.h
+    ${CMAKE_CURRENT_LIST_DIR}/heatshrink_decoder.c
+    ${CMAKE_CURRENT_LIST_DIR}/heatshrink_encoder.c
 )
 
 target_include_directories(heatshrink INTERFACE
