--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,5 @@
     "cmake.buildBeforeRun": true,
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "cortex-debug.openocdPath": "${env:PICO_OPENOCD}",
-    "files.associations": {
-        "i2c.h": "c",
-        "binary_info.h": "c",
-        "code.h": "c",
-        "structure.h": "c",
-        "defs.h": "c",
-        "stdint.h": "c"
-    },
-    "cortex-debug.variableUseNaturalFormat": false
+    "cortex-debug.variableUseNaturalFormat": true
 }
