--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,13 @@ pico_sdk_init()
 add_executable(${PROJECT_NAME}
     src/main.c
     src/ssd1306_driver.h src/ssd1306_driver.c
-    src/raspberry26x32.h
-    src/ssd1306_font.h
+    examples/raspberry26x32.h
+    examples/ssd1306_font.h
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-    include/
+    "include/"
+    "examples/"
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
